public/css/sif.css
.hide {
  display: none;
}

.gacha-dialogue {

}

.envelope-image-container {
  text-align: center;
  height: inherit;
  max-width: 1024px;
}

.envelope-image {
  -ms-transform: rotate(7deg); /* IE 9 */
  -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
  transform: rotate(7deg);
  max-width: 50%;
}

.envelope-enter {
  width: 270px;
}
.envelope-enter.envelope-enter-active {
  width: 280px;
  transition: width 450ms;
  -webkit-transition: width 450ms;
}
.envelope-enter-done {
  width: 280px;
}

.aidoru-name a {
  text-decoration: none;
  color: #E71695;
}

.opened-card-container {
  text-align: center;
  height: inherit;
  opacity: 0;
  display: none;
}
.opened-card-enter {
  opacity: 0;
  display: block;
}
.opened-card-enter.opened-card-enter-active {
  opacity: 1;
  display: block;
  transition: opacity 500ms ease-in;
  -webkit-transition: opacity 500ms ease-in;
}
.opened-card-container.opened-card-enter-done {
  opacity: 1;
  display: block;
}

.aidoru-name {
  display: block;
}

/* Enclosing container */
.gacha-container {
  height: 100%;
  max-width: 480px;
  margin: auto;
}

/* Megumin */
.gacha-loading {
  max-width: 50%;
}

/* Images in initial state after opening envelope */
.aidoru-image {
  width: 325px;
  height: 457.031px;
  padding: 10px;
  text-align: center;
  margin: auto;
}
.aidoru-image.idolized {
  width: 0;
  height: 0;
  padding: 0;
  margin: 0;
}

/* Normal card disappears */
.normal-card-enter {
  width: 325px;
  height: 457.031px;
  padding: 10px;
  display: inline;
  text-align: center;
  margin: auto;
}
.normal-card-enter.normal-card-enter-active {
  width: 0;
  height: 457.031px;
  padding: 10px;
  display: inline;
  text-align: center;
  margin: auto;
  transition: width 300ms ease-in-out;
  -webkit-transition: width 300ms ease-in-out;
}
.normal-card-enter-done {
  width: 0;
  height: 457.031px;
  padding: 0;
  display: none;
  text-align: center;
  margin: auto;
}

/* Normal card appears */
.normal-card-exit {
  width: 0;
  height: 0;
  padding: 0;
  display: none;
  text-align: center;
  margin: auto;
}
.normal-card-exit-active {
  width: 325px;
  height: 457.031px;
  padding: 10px;
  display: none;
  text-align: center;
  margin: auto;
  transition: width 300ms 300ms ease-in-out;
  -webkit-transition: width 300ms 300ms ease-in-out;
}
.normal-card-exit-done {
  width: 325px;
  height: 457.031px;
  padding: 10px;
  display: block;
  text-align: center;
  margin: auto;
}

/* Idolized card appears */
.idolized.idolized_card-enter {
  width: 0;
  height: 0;
  padding: 0;
  text-align: center;
  margin: auto;
}
.idolized.idolized-card-enter.idolized-card-enter-active {
  width: 325px;
  height: 0;
  padding: 0;
  text-align: center;
  margin: auto;
  transition: width 300ms 300ms ease-in-out;
  -webkit-transition: width 300ms 300ms ease-in-out;
}
.idolized.idolized-card-enter-done {
  width: 325px;
  height: 457.031px;
  padding: 10px;
  display: block;
  text-align: center;
  margin: auto;
}

/* Idolized card disappears */
.idolized.idolized-card-exit {
  width: 325px;
  height: 457.031px;
  padding: 10px;
  display: inline;
  text-align: center;
  margin: auto;
}
.idolized.idolized-card-exit.idolized-card-exit-active {
  width: 0;
  height: 457.031px;
  padding: 10px;
  display: inline;
  text-align: center;
  margin: auto;
  transition: width 300ms ease-in-out;
  -webkit-transition: width 300ms ease-in-out;
}
.idolized.idolized-card-exit-done {
  width: 0;
  height: 457.031px;
  padding: 0;
  display: none;
  text-align: center;
  margin: auto;
}


/* Gacha button layout and entering animation */
.gacha-button {
  background-color: royalblue;
}

.gacha-button-container {
  text-align: center;
  opacity: 0;
  display: none;
}

.gacha-buttons-enter {
  opacity: 0;
  display: block;
}
.gacha-buttons-enter-active {
  opacity: 1;
  display: block;
  transition: opacity 500ms ease-in;
  -webkit-transition: opacity 500ms ease-in;
}
.gacha-buttons-enter-done {
  opacity: 1;
  display: block;
}

